using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class AnimationStates {
	public const string STANDING = "Standing";
	public const string LIGHT_PUNCH = "LightPunch";
	public const string LIGHT_KICK = "LightKick";
	public const string HEAVY_PUNCH = "HeavyPunch";
	public const string HEAVY_KICK = "HeavyKick";
	public const string CROUCHING = "Crouching";
	public const string WALK_FORWARDS = "WalkForwards";
	public const string WALK_BACKWARDS = "WalkBackwards";
}
